2002-01-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02873] delete "decode MIME-body" in doc{,-jp}/README
	* doc-jp/README: delete "decode MIME-body"
	* doc/README: ditto

2002-01-18  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02872] EWS4800 sh doesn't work ${param-word}
	* configure (use_migemo): change migemo URL
	* configure (def_migemo_command): fix for EWS4800
	* configure (def_image_viewer): ditto
	* configure (def_audio_player): ditto

2002-01-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02871] ignore SIGCHLD (for at least EWS4800)
	* search.c (open_migemo): signal(SIGCHLD, SIG_IGN);

2002-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02870] don't kill migemo by SIGINT 
	* main.c (w3m_exit): init_migemo() to kill migemo 
	* search.c: #include <unistd.h>
	* search.c (migemo_active): added
	* search.c (migemo_pid): added
	* search.c (init_migemo): migemo_active = use_migemo
	* search.c (init_migemo): kill migemo_pid
	* search.c (open_migemo): s/pid/migemo_pid/
	* search.c (open_migemo): setpgrp()
	* search.c (open_migemo): s/use_migemo/migemo_active/
	* search.c (migemostr): ditto
	* search.c (forwardSearch): ditto
	* search.c (backwardSearch): ditto

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02867] mark URL for external URIs
	* main.c (chkURLBuffer): chkExternalURIBuffer()
	* proto.h (chkExternalURIBuffer): added
	* url.c (chkExternalURIBuffer): added

2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02866]
	* search.c: #include <signal.h>
	* search.c (open_migemo): ignore SIG_INT for migemo process
	* search.c (open_migemo): close_tty()
	* search.c (open_migemo): use execl() instead of system()
	
2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02865]
	* search.c (open_migemo): add flush_tty()

2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02864] def_migemo_command
	* configure (def_migemo_command): default is